CPD-58 Merge orders and trip data type to transport-items
